# icmpc_collab_transport

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflow-scripts/: 00-check-disk-usage.sh  01-install-dependencies.sh  02-download-dataset.sh  03-extract-dataset.sh  04-run-analysis-scripts.sh
.github/workflows/: ci.yml
data/eleyng/: train_passing_labels.csv
data/fluentrobotics/: preprocess-qualtrics.sh
deployment_scripts/: algo1.sh  algo2.sh  algo3.sh  record.sh  topic_monitor.py
src/eleyng/table-carrying-ai/: README.md  model.ckpt  pyproject.toml
src/eleyng/table-carrying-ai/cooperative_transport/: constants.py  custom_rewards.py  planner_utils.py  vrnn.py
src/fluentrobotics/icmpc_collab_transport/: __init__.py
src/fluentrobotics/icmpc_collab_transport/core/: strategy.py
src/fluentrobotics/icmpc_collab_transport/core/passing_inference/: __init__.py  action_likelihood.py  posterior.py  prior.py  wrapper.py
src/fluentrobotics/icmpc_collab_transport/core/se2_types/: __init__.py  rotation.py  transform.py  vector.py  velocity.py
src/fluentrobotics/icmpc_collab_transport/deployment/: __init__.py  diff_drive_kinematics.py  environment_bounds.py  icmpc_node.py  mpc_node_base.py  tf2_wrapper.py  vanilla_mpc_node.py  vis_utils.py  vrnn_node.py
src/fluentrobotics/icmpc_collab_transport/evaluation/: association.py  h1_objective_metrics.py  h2_subjective_metrics.py  model_intuition_figures.py  parallel.py  parse_rosbags.py  plot_trajectories.py  qualtrics.py  questionnaires.py  sim.py  stats.py
