[project]
name = "fluentrobotics-icmpc-collab-transport"
version = "0.1.0"
description = "Implicit Communication in Human-Robot Collaborative Transport"
authors = [{ name = "Elvin Yang", email = "eyy@umich.edu" }]
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "numpy~=1.26",   # Numba 0.60 does not support numpy 2.0
    "scipy~=1.15",
    "loguru",
    "numba~=0.60.0",
]

[dependency-groups]
dev = ["mypy", "jupyter", "pandas-stubs", "types-tqdm", "types-seaborn"]
deployment = ["torch", "pytorch-mppi==0.7.5", "cooperative_transport"]
evaluation = [
    "rosbags",
    "matplotlib",
    "pandas",
    "pyarrow",
    "seaborn",
    "pingouin",
    "scikit-learn",
    "tqdm",
    "opencv-python-headless",
    "av",
    "imageio",
    "pyyaml",
]

[tool.uv.sources]
cooperative_transport = { path = "src/eleyng/table-carrying-ai", editable = true }
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fluentrobotics"]


[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
warn_redundant_casts = true
disallow_untyped_calls = true
allow_redefinition = true
namespace_packages = false
