[project]
name = "cooperative_transport"
version = "0.0.1"
description = "Custom environment and model for training RL agents for cooperative transport."
authors = [
    { name = "Eley Ng", email = "eleyng@stanford.edu" },
    { name = "Ziang Liu" },
]
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "torch",
    "pytorch-lightning",
    "numpy~=1.26"
]
